German/Lenguajes y compiladores/Lab3/tests/bad/bad13.imp
data Bool = True | False
data N = O | S <N>

method suma (n : N, b : Bool) returns (r : N)
{
    -- bad assignment
    var m : N
    n, b := O [], True, False
} 
